<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ExercisesFragment"
    android:background="#242424">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:text="@string/exercises"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:paddingHorizontal="12dp" />

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            app:tint="@color/white" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:paddingTop="5dp"
        android:layout_marginHorizontal="40dp" />


</FrameLayout>