<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />
    <item
        android:id="@+id/nav_workout"
        android:icon="@drawable/ic_workout"
        android:title="@string/workout" />
    <item
        android:id="@+id/nav_exercises"
        android:icon="@drawable/ic_exercises_w"
        android:title="@string/exercises" />
</menu>