<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/setup_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/roboto_bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText

            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/text_input_background"

            android:fontFamily="@font/roboto_light"
            android:hint="@string/prompt_name"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"


            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="26sp"
            android:layout_marginTop="30dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.7" />

        <EditText

            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/text_input_background"

            android:fontFamily="@font/roboto_light"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"


            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="26sp"
            android:layout_marginTop="30dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintWidth_percent="0.7" />

        <EditText

            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""

            android:background="@drawable/text_input_background"

            android:fontFamily="@font/roboto_light"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:layout_marginTop="30dp"


            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="26sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintWidth_percent="0.7" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:backgroundTint="#355CFF"
            android:fontFamily="@font/roboto_regular"

            android:layout_marginTop="100dp"
            android:paddingVertical="20dp"

            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>