<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingVertical="20dp"
    android:paddingHorizontal="60dp"
    android:gravity="center_horizontal"
    android:background="@drawable/prompt_background">

    <TextView
        android:id="@+id/exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exercise name"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/sets"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="Sets"
        android:textColorHint="#928E8E"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@drawable/prompt_text_input"
        android:inputType="number"
        android:fontFamily="@font/roboto_regular"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/prompt_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@android:color/holo_red_light"
            android:background="@android:color/transparent"
            android:padding="0dp" />


        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="#355CFF"
            android:background="@android:color/transparent"
            android:padding="0dp" />

    </LinearLayout>
</LinearLayout>