...

        <View
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@android:color/holo_red_light"
...
            android:padding="0dp" />

    </LinearLayout>

    <!-- List of Exercises -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercises_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp" />

</LinearLayout>
